# FounderGPT

./: .gitignore  CHANGELOG.md  PROJECT_GOAL.md  README.md  ROADMAP.md  TASKS.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  common.py  compliance_agent.py  critic_agent.py  decision_agent.py  finance_agent.py  founder_profile_agent.py  gtm_agent.py  market_agent.py  planner_agent.py  product_agent.py  report_agent.py  risk_agent.py
backend/app/api/: founder.py  health.py  war_room.py
backend/app/engines/: __init__.py  failure_prediction_engine.py  readiness_engine.py  simulation_engine.py
backend/app/orchestration/: __init__.py  debate_engine.py  routing.py  war_room_pipeline.py
backend/app/retrieval/: __init__.py  citation_parser.py  foundry_iq_client.py
backend/app/schemas/: __init__.py  requests.py  responses.py  state.py
backend/app/utils/: __init__.py  heuristics.py  logger.py
backend/tests/: README.md  test_pipeline.py  test_scoring.py
data/: README.md  synthetic_demo_sessions.json  synthetic_founders.json  synthetic_market_data.json  synthetic_startup_ideas.json
deployment/: Dockerfile.backend  README.md  azure_deployment_notes.md  docker-compose.yml
docs/: README.md  agents.md  api_design.md  architecture.md  demo_script.md  judging_strategy.md  microsoft_alignment.md  reasoning_patterns.md  workflow.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: README.md  globals.css  layout.tsx  page.tsx
knowledge_base/: README.md
(+38 files in other folders)
